# OpenGL-ES_Renderer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaderPrograms/: FragmentShader.frag  TriangleFragmentShader.frag  TriangleVertexShader.vert  VertexShader.vert
app/src/main/cpp/: AXRGLFunctions.cpp  AXRGLFunctions.hpp  AXRLogger.cpp  AssetManagerHelperJNI.cpp  AssetManagerHelperJNI.hpp  CMakeLists.txt  Texture.cpp  Texture.h  Transform.cpp  Transform.hpp  gl3stub.h
app/src/main/cpp/JNICalls/: JNICalls.cpp  JNICalls.hpp
app/src/main/cpp/Shaders/: Shader.cpp  Shader.hpp
app/src/main/cpp/Shapes/: IShape.hpp  Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp
app/src/main/java/com/example/customlauncher/: CustomGLView.java  GLES3JNILib.java  MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
